--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     // MongoDB for data storage
     implementation 'org.mongodb:mongo-java-driver:_'
 
+    // GSON to parse JSON files
+    implementation 'com.google.code.gson:gson:_'
 }
 
 application {
