--- a/versions.properties
+++ b/versions.properties
@@ -15,6 +15,8 @@ plugin.io.freefair.lombok=6.6.1
 
 version.com.google.code.findbugs..annotations=3.0.1
 
+version.com.google.code.gson..gson=2.10.1
+
 version.com.google.guava..guava=31.1-jre
 
 version.com.google.truth..truth=1.1.3
