--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,13 @@ jacocoTestReport {
         classDirectories.from = files(classDirectories.files.collect {
             fileTree(
                 dir: it,
-                exclude: [ 'edu/northeastern/cs5500/starterbot/DaggerBotComponent.class','edu/northeastern/cs5500/starterbot/BotComponentImpl.class','edu/northeastern/cs5500/starterbot/Builder.class' ])
+                exclude: [ 'edu/northeastern/cs5500/starterbot/DaggerBotComponent.class',
+                '**/Dagger*BotComponentImpl.class',
+                'edu/northeastern/cs5500/starterbot/Builder.class',
+                '**/*_MembersInjector.class',
+                '**/Dagger*Component.class', // covers component implementations
+                '**/Dagger*Component$Builder.class', // covers component builders
+                '**/*Module_*Factory.class' ])
         })
     }
 }
