adding dagger auto generate classes to be excluded from code coverage

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,19 @@ jacocoTestReport {
         csv.enabled false
         xml.destination file("${buildDir}/reports/jacoco.xml")
     }
+    afterEvaluate { // (optional) : to exclude classes / packages from coverage
+        classDirectories.from = files(classDirectories.files.collect {
+            fileTree(
+                dir: it,
+                exclude: [ 'edu/northeastern/cs5500/starterbot/DaggerBotComponent.class',
+                '**/Dagger*BotComponentImpl.class',
+                'edu/northeastern/cs5500/starterbot/Builder.class',
+                '**/*_MembersInjector.class',
+                '**/Dagger*Component.class', 
+                '**/Dagger*Component$Builder.class',
+                '**/*Module_*Factory.class' ])
+        })
+        }
 }
 
 // Check coverage after each test run
